Maintennace page copy

--- a/maintenance.html
+++ b/maintenance.html
@@ -95,18 +95,21 @@
 
         <div class="section-title">
           <h2>Maintenance</h2>
-          <p>We believe that efficiency in our cleaning methods will always ensure that we provide a timely, high end quality standard of finish to your home or workplace.</p>
+          <p>Looking for reliable and affordable maintenance services? Our company has a team of experts ready to keep your property in pristine condition all year round.</p>
         </div>
 
         <div class="row gy-4">
           <div class="col-lg-6">
-            <h3>Voluptatem dignissimos provident quasi corporis</h3>
-            <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="">
+            <h3>Let Optimo take care of your maintenance needs</h3>
             <p>
-              An emergency normally leads to panic, its human nature. Who do I call? The Optimo rapid response teams are on call 24 hours a day and we aim to respond to all reactive property maintenance calls within 4 hours, so you can be assured that professional help is close at hand.
+              At Optimo, we understand that emergencies can lead to panic. That's why our rapid response teams are available 24/7 to respond to all reactive property maintenance calls within 4 hours.
+            </p>
+            <img src="assets/img/optimomaintenance.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            <p>
+              Our team is always on time and on budget, and all work is completed by competent and qualified tradespeople who take pride in their work. 
             </p>
             <p>
-              Always on time, on budget and with all work completed by a competent and qualified tradesperson, all of whom take pride in their work. Get in touch with one of our friendly team today.
+              In addition to emergency services, our experienced team can also assist with a wide range of renovation and home improvement services. Explore our comprehensive list of services below.
             </p>
           </div>
           <div class="col-lg-6">
@@ -115,19 +118,18 @@
                 Areas of Expertise:
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> Planned Maintenance - Fencing, Redecoration, Repairs, New Kitchens, Gardening, </li>
-                <li><i class="bi bi-check-circle-fill"></i> Reactive Maintenance - Emergency Call Out Repairs, Drainage, Electrical, Plumbing, Carpentry, Roofing</li>
-                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bi bi-check-circle-fill"></i> Planned Maintenance </li>
+                <li><i class="bi bi-check-circle-fill"></i> Reactive Maintenance - Emergency Call Out Repairs</li>
+                <li><i class="bi bi-check-circle-fill"></i> General Handyman Repairs</li>
               </ul>
               <p>
-                Our experienced team can assist with a large range of renovation and home improvement services. These include carpentry, painting, plumbing, electrical, plastering and masonry services. Optimo can renovate your bathroom, toilet, shower or garage and provide a handyman for those smaller jobs. For those times when the worst happens, we can quickly do insurance repairs and emergency make-safes.
+                For insurance repairs and emergency make-safes, You can rest assured that Our fully licensed and insured commercial specialists are close at hand.
               </p>
               <p>
-                Our team also includes specialists in the commercial field, all with the relevant licenses and insurances. We can help with everything from redecorating to insurance repairs and emergency make safes. Our scope of work is broad so please call us to find out how we can help you.
+                Our scope of work is broad, so please don't hesitate to contact us to find out how we can help you!
               </p>
               <div class="position-relative mt-4">
                 <img src="assets/img/optimoteam2.JPG" class="img-fluid rounded-4" alt="">
-                <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="glightbox play-btn"></a>
               </div>
             </div>
           </div>
@@ -143,27 +145,28 @@
         <div class="row no-gutters">
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up">
-            <span>Tenants</span>
-            <h4>Moving out? Let us take the hassle away from making your old home look like new when you leave</h4>
-            <p>Our specially trained cleaners will perform an all-around cleaning so we can help you spend less on moving out and retain your deposit. We can do additional tasks upon request, so if you need anything specific just ask and we will be happy to help. End of tenancy cleaning services are tailored to take one of the biggest stresses out of moving out of a rented property. We clean the property like never before. Our cleaning services provide a deep clean and ensure that you’ll get as much of your deposit back as is in our control. We provide VAT invoices on request and can also pick up keys from local estate agents or another address nearby.</p>
+            <span>Planned Maintenance</span>
+            <h4>Prevent Costly Future Repairs</h4>
+            <p>Planned maintenance is an essential aspect of any property upkeep strategy. By regularly maintaining your property, you can avoid costly repairs down the line and ensure that your property remains in top condition.
+              With our expert team of professionals, we work with you to create a tailored maintenance plan that meets your specific needs and budget.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
-            <span>Landlords</span>
-            <h4>Repellat Nihil</h4>
-            <p>Optimo can help you prepare your property for new tenants and make it look welcoming and nice for them. With our in house handyman services we can step in if the premises need a bit of repair before new people move in. Contact us to find out how we can assist you.</p>
+            <span>Reactive Maintenance</span>
+            <h4>Emergency Repairs</h4>
+            <p>Unexpected problems that need immediate attention, such as a burst pipe, power outage, or a damaged roof. Our team of experts are available 24/7 to respond to emergency call-outs and provide timely repairs to get your property back in order. With our rapid response and efficient service, you can rest assured that your property is in safe hands.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
-            <span>Estate Agents</span>
-            <h4> Ad ad velit qui</h4>
-            <p>We work with well-known estate agents and property management agencies to handle cleaning of homes after tenants move out and before the new ones move in. Our partnerships allow agencies to offer the best of their properties to clients and present them in the best light possible.</p>
+            <span>Handyman Repairs</span>
+            <h4> No Job Too Small</h4>
+            <p>Our skilled and experienced handymen can tackle a wide range of minor repairs, from fixing leaky taps and replacing light bulbs to hanging shelves and painting walls. No job is too big or too small for our team, and we pride ourselves on delivering high-quality workmanship at an affordable price. With our flexible scheduling options, you can book our handyman services at a time that suits you.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
-            <span>Holiday Let</span>
-            <h4>Why don't you </h4>
-            <p>stand out from the crowd with our excellent / pristine cleaning service. Getting your holiday let ready for each new guest can be overwhelming and stressful. Our Optimo team will provide a high-quality reliable service that will take away that feeling, helping you to provide a comfortable, clean environment for your guests whether in the short or long term.</p>
+            <span>Grounds Maintenance</span>
+            <h4>First Impressions Count</h4>
+            <p>Grounds maintenance is an essential aspect of property upkeep, ensuring that the external areas of your property remain in top condition. We work with you to develop a tailored maintenance plan that meets your specific requirements and budget, ensuring your property looks pristine year-round.</p>
           </div>
 
         </div>
@@ -177,7 +180,7 @@
           
                   <div class="section-title aos-init aos-animate" data-aos="fade-up">
                     <h2>Services</h2>
-                    <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+                    <p>Can't find the specific service you're looking for? Please don't hesitate to contact us for more information or to discuss your unique maintenance needs. In the meantime, feel free to explore the full range of our services below to discover the many ways in which we can help you keep your property looking its best.</p>
                   </div>
           
                   <div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
@@ -262,9 +265,9 @@
         <div class="container aos-init aos-animate" data-aos="zoom-in">
   
           <div class="text-center">
-            <h3>Call To Action</h3>
-            <p>Your satisfaction is our top priority. Get in touch with us now to learn more about our cleaning and maintenance solutions and how we can help you.</p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <h3>What Are Your Maintenance Needs?</h3>
+            <p>Your satisfaction is our top priority. Get in touch with us now to learn more about our maintenance solutions and how we can help you.</p>
+            <a class="cta-btn" href="#">Contact Us</a>
           </div>
   
         </div>
@@ -371,7 +374,7 @@
     <footer id="footer">
         <div class="container">
           <h3>OPTIMO</h3>
-          <p>Cleaning and maintenance made easy!</p>
+          <p>Cleaning and Maintenance Made Easy!</p>
           <div class="social-links">
             <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
