media queries set up

--- a/cleaning.html
+++ b/cleaning.html
@@ -100,27 +100,31 @@
 
         <div class="row gy-4">
           <div class="col-lg-6">
-            <h3>Voluptatem dignissimos provident quasi corporis</h3>
+            <h3>Transform Your Home and Business with Optimo's Cleaning Services</h3>
             <img src="assets/img/teamphoto.JPG" class="img-fluid rounded-4 mb-4" alt="">
             <p>
-              We are passionate about domestic cleaning and providing a reliable home service. As a family-owned independent business, we understand the value of family and spending time with each other. We care greatly about our customers, their homes and their families. We go above and beyond to ensure that our customer's needs are always met!
+              As a family-owned independent business, we understand the importance of spending quality time together. That's why we're passionate about providing reliable home cleaning services that will free up your time and let you focus on what really matters.
             </p>
             <p>
-              Our costs and efficiency in our methods ensure that we provide a high end quality standard of finish. We pride ourselves on constantly pursuing better, safer cleaning solutions. Our cleaning teams have all been trained to our exacting standards of cleanliness.
+              we care deeply about our customers, their homes, and their families. We take great pride in going above and beyond to ensure that our customers' needs are always met. Our cleaning teams have been trained to our exacting standards of cleanliness, so you can rest assured that your home or business will receive the highest quality of service possible.
             </p>
           </div>
           <div class="col-lg-6">
             <div class="content ps-0 ps-lg-5">
+              <p>
+                With deep cleaning and disinfection of high priority to all of us, you can trust Optimo to provide a safe and clean environment for your customers and staff.
+              </p>
               <p class="fst-italic">
-                With deep cleaning and disinfection of high priority to all of us. You can ensure that with Optimo your customers and staff will be provided with a safe and clean environment.
+                Our business cleaning services are designed to;
               </p>
               <ul>
-                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+                <li><i class="bi bi-check-circle-fill"></i> Improving productivity</li>
+                <li><i class="bi bi-check-circle-fill"></i> Reducing sick days</li>
+                <li><i class="bi bi-check-circle-fill"></i> Creating a positive and professional image</li>
+                <li><i class="bi bi-check-circle-fill"></i> Reduce the risk of accidents and injuries</li>
               </ul>
               <p>
-                Our business cleaning services can increase productivity and reduce sickness rates while at the same time raising your standards of cleanliness. We deliver a non disruptive but highly effective deep cleaning service to many organisations in offices, call centres, golf clubs, medical centres and much more. All premises can be cleaned to your individual wishes and requirements.
+                We deliver a non-disruptive but highly effective deep cleaning service to many organizations, including offices, call centers, golf clubs, medical centers, and much more. All premises can be cleaned to your individual wishes and requirements.
               </p>
 
               <div class="position-relative mt-4">
@@ -142,26 +146,26 @@
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up">
             <span>Tenants</span>
-            <h4>Moving out? Let us take the hassle away from making your old home look like new when you leave</h4>
-            <p>Our specially trained cleaners will perform an all-around cleaning so we can help you spend less on moving out and retain your deposit. We can do additional tasks upon request, so if you need anything specific just ask and we will be happy to help. End of tenancy cleaning services are tailored to take one of the biggest stresses out of moving out of a rented property. We clean the property like never before. Our cleaning services provide a deep clean and ensure that you’ll get as much of your deposit back as is in our control. We provide VAT invoices on request and can also pick up keys from local estate agents or another address nearby.</p>
+            <h4>Moving out?</h4>
+            <p> Let us take the hassle away from making your old home look like new when you leave. Our specially trained cleaners will perform an all-around cleaning so we can help you spend less on moving out and retain your deposit. We provide VAT invoices on request and can also pick up keys from local estate agents or another address nearby.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
             <span>Landlords</span>
-            <h4>Repellat Nihil</h4>
+            <h4>New Tenants?</h4>
             <p>Optimo can help you prepare your property for new tenants and make it look welcoming and nice for them. With our in house handyman services we can step in if the premises need a bit of repair before new people move in. Contact us to find out how we can assist you.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
             <span>Estate Agents</span>
-            <h4> Ad ad velit qui</h4>
+            <h4>Property Presentation</h4>
             <p>We work with well-known estate agents and property management agencies to handle cleaning of homes after tenants move out and before the new ones move in. Our partnerships allow agencies to offer the best of their properties to clients and present them in the best light possible.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
             <span>Holiday Let</span>
-            <h4>Why don't you </h4>
-            <p>stand out from the crowd with our excellent / pristine cleaning service. Getting your holiday let ready for each new guest can be overwhelming and stressful. Our Optimo team will provide a high-quality reliable service that will take away that feeling, helping you to provide a comfortable, clean environment for your guests whether in the short or long term.</p>
+            <h4>Check Out </h4>
+            <p>Getting your holiday let ready for each new guest can be overwhelming and stressful. Our Optimo team will provide a high-quality reliable service that will take away that feeling, helping you to provide a comfortable, clean environment for your guests whether in the short or long term.</p>
           </div>
 
         </div>
@@ -175,7 +179,7 @@
   
           <div class="section-title aos-init aos-animate" data-aos="fade-up">
             <h2>Services</h2>
-            <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+            <p>Choose Optimo for all your cleaning needs and experience the difference that comes from working with a passionate, reliable, and dedicated cleaning service.</p>
           </div>
   
           <div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
@@ -261,9 +265,9 @@
         <div class="container aos-init aos-animate" data-aos="zoom-in">
   
           <div class="text-center">
-            <h3>Call To Action</h3>
-            <p>Ready to experience a spotless and well-maintained space? Contact us now and let our team get to work!</p>
-            <a class="cta-btn" href="#">Call To Action</a>
+            <h3>Experience The Ultimate Clean</h3>
+            <p>Don't settle for a mediocre clean. Choose our expert team to transform your space. Contact us now to book your cleaning service and experience the difference!</p>
+            <a class="cta-btn" href="#">Contact Us</a>
           </div>
   
         </div>
@@ -370,7 +374,7 @@
     <footer id="footer">
         <div class="container">
           <h3>OPTIMO</h3>
-          <p>Cleaning and maintenance made easy!</p>
+          <p>Cleaning And Maintenance Made Easy!</p>
           <div class="social-links">
             <a href="#" class="facebook"><i class="fa-brands fa-facebook"></i></a>
             <a href="#" class="instagram"><i class="fa-brands fa-instagram"></i></a>
