--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
       <div class="container">
         <div class="hero-content">
-          <h1><span class="typed" data-typed-items="Cleaning, Maintenance, The Next Level Solution"></span><span class="typed-cursor typed-curser--blink" aria-hidden="true">|</span></h1>
+          <h1><span class="typed" data-typed-items="Cleaning, Maintenance, Next Level Solutions"></span><span class="typed-cursor typed-curser--blink" aria-hidden="true"></span></h1>
           <p>Cleaning, Maintenance, Next Level Solutions</p>
 
         </div>
@@ -169,7 +169,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-emoji-smile"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="0" class="purecounter">84</span>
+                      <span data-purecounter-start="0" data-purecounter-end="84" data-purecounter-duration="1" class="purecounter">84</span>
                       <p><strong>Happy Clients</strong> across Cardiff and South Wales</p>
                     </div>
                   </div>
@@ -177,7 +177,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-journal-richtext"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="0" class="purecounter">171</span>
+                      <span data-purecounter-start="0" data-purecounter-end="171" data-purecounter-duration="1" class="purecounter">171</span>
                       <p><strong>Properties</strong> regularly cleaned and maintained</p>
                     </div>
                   </div>
@@ -185,7 +185,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-clock"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="18" data-purecounter-duration="0" class="purecounter">25</span>
+                      <span data-purecounter-start="0" data-purecounter-end="25" data-purecounter-duration="1" class="purecounter">25</span>
                       <p><strong>Hard Workers</strong> fully trained and DBS checked</p>
                     </div>
                   </div>
@@ -193,7 +193,7 @@
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
                       <i class="bi bi-award"></i>
-                      <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">5</span>
+                      <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter">5</span>
                       <p><strong>Years of trading</strong> and building up an established and reputable company</p>
                     </div>
                   </div>
@@ -401,9 +401,11 @@
   
     <!-- Vendor JS Files -->
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
   
     <!-- Template Main JS File -->
