--- a/index.html
+++ b/index.html
@@ -139,14 +139,9 @@
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
               <p>
-                With more and more customers signing up for our cleaning and maintenance services every day, its clear recommendations 
-                have spread through friends and family of our existing customers, which we find to be the best testimony of our quality 
-                and reliability. 
-              </p>
-              <p>
-                We offer personalised and customisable services ranging from one off domestic deep cleaning to regular maintenance of 
-                commercial properties. Our in house maintenance team offer a bespoke service that can take away the headache any issue 
-                including Electrical, Plumbing, Handyman, Windows & Doors, Painting, Carpentry & much more.
+                We offer personalised and customisable services, ranging from one off domestic deep cleans to regular maintenance 
+                of commercial properties. Our in house maintenance team offer a bespoke service including handyman repairs, 
+                carpentry, gardening, windows and much more. 
               </p>
             </div>
           </div>
@@ -253,7 +248,7 @@
   
           <div class="text-center">
             <h3>Get In Touch</h3>
-            <p> Life is busy, so let us take care of the cleaning and maintenance for you. Call us now to schedule your appointment and experience the difference of our professional services.</p>
+            <p> Call us now to schedule your appointment and experience the difference of our professional services.</p>
             <a class="cta-btn" href="#">Contact Us</a>
           </div>
   
@@ -384,7 +379,7 @@
     <footer id="footer">
       <div class="container">
         <h3>OPTIMO</h3>
-        <p>Cleaning and maintenance made easy!</p>
+        <p>Cleaning, Maintenance, Next Level Solutions</p>
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
