--- a/maintenance.html
+++ b/maintenance.html
@@ -42,7 +42,7 @@
         <div class="social-links d-none d-md-block">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -58,14 +58,14 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
             <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="cleaning.html">Cleaning</a></li>
                 <li><a href="maintenance.html">Maintenance</a></li>
               </ul>
             </li>
-            <li><a class="getstarted scrollto" href="index.html/#contact">Contact</a></li>
+            <li><a class="getstarted scrollto" href="index.html#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -264,7 +264,7 @@
           <div class="text-center">
             <h3>What Are Your Maintenance Needs?</h3>
             <p>Your satisfaction is our top priority. Get in touch with us now to learn more about our maintenance solutions and how we can help you.</p>
-            <a class="cta-btn" href="#">Contact Us</a>
+            <a class="cta-btn" href="index.html#contact">Contact Us</a>
           </div>
   
         </div>
@@ -280,7 +280,8 @@
               <div class="content px-xl-5">
                 <h3>Frequently Asked <strong>Questions</strong></h3>
                 <p>
-                  Got a question? We've got the answer! And if you can't find the info you're after here, no worries - just send us a message and we'll help you out.
+                  Got a question? We've got the answer! And if you can't find the info you're after here, no worries - just send us a message and
+                   we'll help you out.
                 </p>
               </div>
             </div>
@@ -312,7 +313,8 @@
                   </h3>
                   <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      When we book a job, we will give you a time window (normally 3 hours) to allow for other jobs to run over, traffic, collecting materials etc. Even with this, please allow an hour after the designated time before getting in touch with us. 
+                      When we book a job, we will give you a time window (normally 3 hours) to allow for other jobs to run over, traffic, collecting 
+                      materials etc. Even with this, please allow an hour after the designated time before getting in touch with us. 
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -326,7 +328,9 @@
                   </h3>
                   <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      There are only two situations where a call-out charge will be applied. If a job has been booked in and a time was agreed but the contractor is unable to gain access. Secondly, most plumbing and electrical works will incur a call-out charge but this will be agreed upon during the booking. 
+                      There are only two situations where a call-out charge will be applied. If a job has been booked in and a time was agreed 
+                      but the contractor is unable to gain access. Secondly, most plumbing and electrical works will incur a call-out charge 
+                      but this will be agreed upon during the booking. 
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -354,7 +358,8 @@
                   </h3>
                   <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      We do not have a set cost for our service. We tend to work with our clients to make sure that they get the most cost effective service and rates are based on their individual needs.
+                      We provide a variety of cleaning services, therefore, we do not have a set price. We tend to work with our clients to make sure that 
+                      they get the most cost-effective service and that rates are based on their individual needs.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -367,7 +372,8 @@
                   </h3>
                   <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      In the unlikely event of any problems within your home, please telephone us on 07726 244510 or email info@weareoptimo.co.uk and we will do our utmost to resolve it.
+                      In the unlikely event of any problems within your home, please call us on our mobile 07726244510 or email info@weareoptimo.co.uk 
+                      and we will do our utmost to resolve it.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -384,11 +390,11 @@
     <footer id="footer">
       <div class="container">
         <h3>OPTIMO</h3>
-        <p>Cleaning, Maintenance, Next Level Solutions</p>
+        <p>Cleaning, Maintenance, Next Level Solutions!</p>
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="copyright">
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
