--- a/cleaning.html
+++ b/cleaning.html
@@ -42,7 +42,7 @@
         <div class="social-links d-none d-md-block">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -58,14 +58,14 @@
         <nav id="navbar" class="navbar">
           <ul>
             <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
+            <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
             <li class="dropdown"><a href="#"><span>Services</span> <i class="bi bi-chevron-down"></i></a>
               <ul>
                 <li><a href="cleaning.html">Cleaning</a></li>
                 <li><a href="maintenance.html">Maintenance</a></li>
               </ul>
             </li>
-            <li><a class="getstarted scrollto" href="#contact">Contact</a></li>
+            <li><a class="getstarted scrollto" href="index.html#contact">Contact</a></li>
           </ul>
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
@@ -263,7 +263,7 @@
           <div class="text-center">
             <h3>Experience The Ultimate Clean</h3>
             <p>Don't settle for a mediocre clean. Choose our expert team to transform your space. Contact us now to book your cleaning service and experience the difference!</p>
-            <a class="cta-btn" href="#">Contact Us</a>
+            <a class="cta-btn" href="index.html#contact">Contact Us</a>
           </div>
   
         </div>
@@ -297,7 +297,9 @@
                   </h3>
                   <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      Yes, we provide all materials and equipment required to carry out all cleaning agreed with you.
+                      Yes, we have our own materials and equipment required to carry out all cleaning duties. However, some of our customers prefer 
+                      us to use their own chemicals and equipment as they have a particular scent or brand they prefer us to use. We are completely 
+                      flexible and customer-focused. 
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -311,7 +313,9 @@
                   </h3>
                   <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      A deep clean is an additional clean that is more detailed than a regular clean.
+                      A deep clean is a more thorough clean. A regular clean includes the usual maintenance such as vacuuming, mopping, dusting, etc,
+                       whereas a deep clean includes all of the above as well as cleaning all the woodwork such as door frames and skirting boards, we 
+                       clean behind and under furniture, and internal windows, and if required the oven. 
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -325,7 +329,7 @@
                   </h3>
                   <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      No, it is not included in the regular clean but we can provide carpet cleaning as an additional service.
+                      No, it is not included in either the regular or deep clean but we do provide carpet cleaning as an additional service.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -339,7 +343,8 @@
                   </h3>
                   <div id="faq-content-4" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      No, though you should feel comfortable being at home if you choose. We operate a strict security system for your keys so you can relax when you're out.
+                      No, you do not need to be home, though you should feel comfortable being at home if you choose to. We operate a strict 
+                      security system for your keys so you can relax when you're out.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -353,7 +358,8 @@
                   </h3>
                   <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      We do not have a set cost for our service. We tend to work with our clients to make sure that they get the most cost effective service and rates are based on their individual needs.
+                      We provide a variety of cleaning services, therefore, we do not have a set price. We tend to work with our clients to make 
+                      sure that they get the most cost-effective service and that rates are based on their individual needs.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -366,7 +372,8 @@
                   </h3>
                   <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      In the unlikely event of any problems within your home, please telephone us on 07726 244510 or email info@weareoptimo.co.uk and we will do our utmost to resolve it.
+                      In the unlikely event of any problems within your home, please call us on our mobile 07726244510 or email info@weareoptimo.co.uk 
+                      and we will do our utmost to resolve it.
                     </div>
                   </div>
                 </div><!-- # Faq item-->
@@ -381,11 +388,11 @@
     <footer id="footer">
       <div class="container">
         <h3>OPTIMO</h3>
-        <p>Cleaning, Maintenance, Next Level Solutions</p>
+        <p>Cleaning, Maintenance, Next Level Solutions!</p>
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="copyright">
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
