--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="social-links d-none d-md-block">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
       </div>
     </section>
@@ -379,11 +379,11 @@
     <footer id="footer">
       <div class="container">
         <h3>OPTIMO</h3>
-        <p>Cleaning, Maintenance, Next Level Solutions</p>
+        <p>Cleaning, Maintenance, Next Level Solutions!</p>
         <div class="social-links">
           <a href="https://www.facebook.com/profile.php?id=100088619212533" target="_blank" class="facebook"><i class="fa-brands fa-facebook"></i></a>
           <a href="https://instagram.com/optimoltd" target="_blank" class="instagram"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/company/93122077/admin/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
         </div>
         <div class="copyright">
           © Copyright <strong><span>OPTIMO</span></strong>. All Rights Reserved
