contact form connect counts working copy complete cursor spaced

--- a/maintenance.html
+++ b/maintenance.html
@@ -36,7 +36,7 @@
     <section id="topbar" class="d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:contact@example.com">info@weareoptimo.co.uk</a>
+          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:info@weareoptimo.co.uk">info@weareoptimo.co.uk</a>
           <i class="fa-solid fa-mobile-button phone-icon"></i> 02921324815
         </div>
         <div class="social-links d-none d-md-block">
@@ -99,14 +99,14 @@
           <div class="col-lg-6">
             <h3>Let Optimo take care of your maintenance needs</h3>
             <p>
-              At Optimo, we understand that emergencies can lead to panic. That's why our rapid response teams are available 24/7 to respond to all reactive property maintenance calls within 4 hours.
+              At Optimo, we understand that maintaining and repairing your property can be a time-consuming and stressful process. That's why we offer a comprehensive range of renovation and home improvement services to take care of all your property needs.
             </p>
             <img src="assets/img/optimomaintenance.jpg" class="img-fluid rounded-4 mb-4" alt="">
             <p>
-              Our team is always on time and on budget, and all work is completed by competent and qualified tradespeople who take pride in their work. 
+              Our team of experienced and qualified tradespeople take pride in their work, and we're committed to providing high-quality services that meet your unique needs. 
             </p>
             <p>
-              In addition to emergency services, our experienced team can also assist with a wide range of renovation and home improvement services. Explore our comprehensive list of services below.
+              Whether you need a carpenter or handyman we have you covered, explore our comprehensive list of services below.
             </p>
           </div>
           <div class="col-lg-6">
@@ -116,14 +116,14 @@
               </p>
               <ul>
                 <li><i class="bi bi-check-circle-fill"></i> Planned Maintenance </li>
-                <li><i class="bi bi-check-circle-fill"></i> Reactive Maintenance - Emergency Call Out Repairs</li>
+                <li><i class="bi bi-check-circle-fill"></i> Urgent Repairs</li>
                 <li><i class="bi bi-check-circle-fill"></i> General Handyman Repairs</li>
               </ul>
               <p>
-                For insurance repairs and emergency make-safes, You can rest assured that Our fully licensed and insured commercial specialists are close at hand.
+                In addition to our regular services, we also offer insurance repairs and emergency make-safes through our fully licensed and insured residential specialists. With our broad scope of work and commitment to quality service, you can trust us to take care of all your property needs.
               </p>
               <p>
-                Our scope of work is broad, so please don't hesitate to contact us to find out how we can help you!
+                Don't let the stress of property maintenance get in the way of your busy life. Contact us today to learn more about how we can help you keep your property in top condition.
               </p>
               <div class="position-relative mt-4">
                 <img src="assets/img/optimoteam2.JPG" class="img-fluid rounded-4" alt="">
@@ -150,8 +150,8 @@
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
             <span>Reactive Maintenance</span>
-            <h4>Emergency Repairs</h4>
-            <p>Unexpected problems that need immediate attention, such as a burst pipe, power outage, or a damaged roof. Our team of experts are available 24/7 to respond to emergency call-outs and provide timely repairs to get your property back in order. With our rapid response and efficient service, you can rest assured that your property is in safe hands.</p>
+            <h4>Urgent Repairs</h4>
+            <p>We understand that unexpected incidents and damage can be traumatic and overwhelming. That's why our team is equipped to provide insurance repairs and emergency make-safes in a prompt and efficient manner. Our fully licensed and insured residential specialists have the expertise to assess the damage and provide necessary repairs to make your property safe and secure.</p>
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="200">
@@ -161,9 +161,9 @@
           </div>
 
           <div class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="300">
-            <span>Grounds Maintenance</span>
+            <span>Property Maintenance</span>
             <h4>First Impressions Count</h4>
-            <p>Grounds maintenance is an essential aspect of property upkeep, ensuring that the external areas of your property remain in top condition. We work with you to develop a tailored maintenance plan that meets your specific requirements and budget, ensuring your property looks pristine year-round.</p>
+            <p>Property maintenance is an essential aspect of property upkeep, ensuring that the external areas of your property remain in top condition. We work with you to develop a tailored maintenance plan that meets your specific requirements and budget, ensuring your property looks pristine year-round.</p>
           </div>
 
         </div>
@@ -358,7 +358,7 @@
                   </h3>
                   <div id="faq-content-5" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      We provide a variety of cleaning services, therefore, we do not have a set price. We tend to work with our clients to make sure that 
+                      We provide a variety of maintenance services, therefore, we do not have a set price. We tend to work with our clients to make sure that 
                       they get the most cost-effective service and that rates are based on their individual needs.
                     </div>
                   </div>
@@ -372,7 +372,7 @@
                   </h3>
                   <div id="faq-content-6" class="accordion-collapse collapse" data-bs-parent="#faqlist">
                     <div class="accordion-body">
-                      In the unlikely event of any problems within your home, please call us on our mobile 07726244510 or email info@weareoptimo.co.uk 
+                      In the unlikely event of any problems, please call us on our mobile 07726244510 or email info@weareoptimo.co.uk 
                       and we will do our utmost to resolve it.
                     </div>
                   </div>
