--- a/cleaning.html
+++ b/cleaning.html
@@ -36,7 +36,7 @@
     <section id="topbar" class="d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:contact@example.com">info@weareoptimo.co.uk</a>
+          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:info@weareoptimo.co.uk">info@weareoptimo.co.uk</a>
           <i class="fa-solid fa-mobile-button phone-icon"></i> 02921324815
         </div>
         <div class="social-links d-none d-md-block">
