--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="assets/img/favicon.png" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <!-- Main Bootstrap Css-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
       
@@ -36,7 +36,7 @@
     <section id="topbar" class="d-flex align-items-center">
       <div class="container d-flex justify-content-center justify-content-md-between">
         <div class="contact-info d-flex align-items-center">
-          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:contact@example.com">info@weareoptimo.co.uk</a>
+          <i class="fa-solid fa-envelope email-icon"></i><a href="mailto:info@weareoptimo.co.uk">info@weareoptimo.co.uk</a>
           <i class="fa-solid fa-mobile-button phone-icon"></i> 02921324815
         </div>
         <div class="social-links d-none d-md-block">
@@ -78,8 +78,8 @@
 
       <div class="container">
         <div class="hero-content">
-          <h1><span class="typed" data-typed-items="Cleaning, Maintenance, Next Level Solutions"></span><span class="typed-cursor typed-curser--blink" aria-hidden="true"></span></h1>
-          <p>Cleaning, Maintenance, Next Level Solutions</p>
+          <h1><span class="typed" data-typed-items="Cleaning, Maintenance, Next Level Solutions!"></span><span class="typed-cursor typed-curser--blink" aria-hidden="true"></span></h1>
+          <p>Cleaning, Maintenance, Next Level Solutions!</p>
 
         </div>
       </div>
@@ -141,7 +141,7 @@
               <p>
                 We offer personalised and customisable services, ranging from one off domestic deep cleans to regular maintenance 
                 of commercial properties. Our in house maintenance team offer a bespoke service including handyman repairs, 
-                carpentry, gardening, windows and much more. 
+                carpentry, gardening, windows and much more.
               </p>
             </div>
           </div>
@@ -302,7 +302,15 @@
         </div>
       </section>
       <!-- End Team Section -->
-  
+  <!-- ======= Video Testimonial Section ======= -->
+  <section id="call-to-action" class="call-to-action">
+    <div class="container text-center" data-aos="zoom-out">
+      <iframe width="869" height="489" src="https://www.youtube.com/embed/EzWfBrsAvOk" title="We are Optimo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <h3>Call To Action</h3>
+      <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <a class="cta-btn" href="#">Call To Action</a>
+    </div>
+  </section><!-- Video Testimonial Section -->
       <!-- ======= Contact Section ======= -->
       <section id="contact" class="contact">
         <div class="container">
@@ -405,7 +413,7 @@
   
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
-  
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   
   
   </body>
