--- a/cleaning.html
+++ b/cleaning.html
@@ -16,14 +16,10 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
       
-    <!-- Vendor CSS Files
+    <!-- Vendor CSS Files -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    -->
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
     <!--Icons-->
@@ -173,12 +169,12 @@
       <section id="features" class="features">
         <div class="container">
   
-          <div class="section-title aos-init aos-animate" data-aos="fade-up">
+          <div class="section-title" data-aos="fade-up">
             <h2>Services</h2>
             <p>Choose Optimo for all your cleaning needs and experience the difference that comes from working with a passionate, reliable, and dedicated cleaning service.</p>
           </div>
   
-          <div class="row aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
+          <div class="row" data-aos="fade-up" data-aos-delay="300">
             <div class="col-lg-3 col-md-4">
               <div class="icon-box">
                 <i class="fa-solid fa-house-user" style="color: #ffbb2c;"></i>
@@ -258,7 +254,7 @@
       <!-- End Features Section -->
       <!-- ======= CTA ======= -->
       <section id="cta" class="cta">
-        <div class="container aos-init aos-animate" data-aos="zoom-in">
+        <div class="container" data-aos="zoom-in">
   
           <div class="text-center">
             <h3>Experience The Ultimate Clean</h3>
@@ -271,7 +267,7 @@
       <!-- End Cta Section -->
       <!-- ======= Frequently Asked Questions Section ======= -->
       <section id="faq" class="faq">
-        <div class="container aos-init aos-animate" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
   
           <div class="row gy-4">
   
@@ -286,7 +282,7 @@
   
             <div class="col-lg-8">
   
-              <div class="accordion accordion-flush aos-init aos-animate" id="faqlist" data-aos="fade-up" data-aos-delay="100">
+              <div class="accordion accordion-flush" id="faqlist" data-aos="fade-up" data-aos-delay="100">
   
                 <div class="accordion-item">
                   <h3 class="accordion-header">
@@ -410,6 +406,7 @@
       <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
       <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
       <script src="assets/vendor/php-email-form/validate.js"></script>
+      <script src="assets/vendor/aos/aos.js"></script>
     
       <!-- Template Main JS File -->
       <script src="assets/js/main.js"></script>
