--- a/index.html
+++ b/index.html
@@ -306,9 +306,8 @@
   <section id="call-to-action" class="call-to-action">
     <div class="container text-center" data-aos="zoom-out">
       <a href="https://www.youtube.com/watch?v=EzWfBrsAvOk&t=116s" class="glightbox play-btn"></a>
-      <h3>Call To Action</h3>
-      <p> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a class="cta-btn" href="#">Call To Action</a>
+      <h3>Hear what our customers have to say</h3>
+      <p> Discover how our cleaning and maintenance services transformed the homes and businesses of our satisfied clients. Watch their testimonials now!</p>
     </div>
   </section>
   <!-- Video Testimonial Section -->
