--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                   </svg>
                   <i class="fa-solid fa-hand-sparkles"></i>
                 </div>
-                <h4><a href="">Cleaning</a></h4>
+                <h4><a href="cleaning.html">Cleaning</a></h4>
                 <p>Our flexible and reliable operation makes us the go-to company when it comes to cleaning. Click below to see our full range of cleaning services available</p>
               </div>
             </div>
@@ -230,7 +230,7 @@
                   </svg>
                   <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
-                <h4><a href="">Maintenance</a></h4>
+                <h4><a href="maintenance.html">Maintenance</a></h4>
                 <p>We have recently extended our maintenance department and now cover a wide range of maintenance services for all your property needs</p>
               </div>
             </div>
@@ -248,7 +248,7 @@
           <div class="text-center">
             <h3>Get In Touch</h3>
             <p> Call us now to schedule your appointment and experience the difference of our professional services.</p>
-            <a class="cta-btn" href="#">Contact Us</a>
+            <a class="cta-btn" href="#contact">Contact Us</a>
           </div>
   
         </div>
